<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/star"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblViewDigiteoNome"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/Qual_Planeta"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtDigiteoNome"
        android:layout_centerInParent="false"
        android:layout_width="377dp"
        android:layout_height="43dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:inputType="textPersonName"
        android:textColor="@color/Black"
        android:background="@color/colorPrimary"
        android:textSize="20sp"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_centerInParent="false"
        android:layout_below="@+id/txtDigiteoNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="201dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:onClick="procuraPlanetas"
            android:text="@string/Search"
            android:textColor="@android:color/holo_purple" />

        <Button
            android:id="@+id/btnLoad"
            android:layout_width="201dp"
            android:layout_height="60dp"
            android:layout_weight="2"
            android:onClick="load"
            android:text="Last Planet"
            android:textColor="@android:color/holo_purple" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="148dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/linearLayout"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <Button
            android:id="@+id/btnViewSearch"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/search_Location"
            android:textColor="@android:color/holo_purple" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtvLoading"
        android:layout_width="373dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:textColor="@android:color/holo_purple"
        android:textSize="24sp" />

</RelativeLayout>